--- a/Source/WebSite/research.html
+++ b/Source/WebSite/research.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact | Alex Carter</title>
+    <title>Research | Alex Carter</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -13,20 +13,23 @@
         <nav aria-label="Main navigation">
           <ul class="nav-links">
             <li><a href="about.html">About</a></li>
-            <li><a href="research.html">Research</a></li>
+            <li><a class="active" href="research.html">Research</a></li>
             <li><a href="work.html">Current Work</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a class="active" href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="wasm/index.html">Wasm Site</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
     <main class="container section page">
-      <h1>Contact</h1>
-      <p>I’m open to software engineering opportunities and technical discussions.</p>
-      <p>Email: <a href="mailto:alex.carter@example.com">alex.carter@example.com</a></p>
-      <p>LinkedIn: <a href="#">Add your profile URL</a></p>
+      <h1>Research Interests</h1>
+      <ul>
+        <li><strong>AI for engineering workflows:</strong> reducing friction in coding and review.</li>
+        <li><strong>Retrieval + LLM systems:</strong> making answers more grounded and reliable.</li>
+        <li><strong>Delivery reliability:</strong> balancing speed with quality and maintainability.</li>
+      </ul>
     </main>
 
     <footer class="site-footer"><div class="container"><p>© 2026 Alex Carter.</p></div></footer>
