--- a/Source/WebSite/updates.html
+++ b/Source/WebSite/updates.html
@@ -1,7 +1,7 @@
 <div class="updates-feed">
 <h3>2026-02-27 – Scaffold Refresh</h3>
 <ul class="updates-list">
-  <li>Moved HTML/CSS into `Source/Website/`.</li>
+  <li>Moved HTML/CSS into `Source/WebSite/`.</li>
   <li>Added GitHub Pages workflow and repo scaffold.</li>
 </ul>
 </div>
