--- a/Source/WebSite/about.html
+++ b/Source/WebSite/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Research | Alex Carter</title>
+    <title>About | Alex Carter</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -12,23 +12,28 @@
         <a class="brand" href="index.html">Alex Carter</a>
         <nav aria-label="Main navigation">
           <ul class="nav-links">
-            <li><a href="about.html">About</a></li>
-            <li><a class="active" href="research.html">Research</a></li>
+            <li><a class="active" href="about.html">About</a></li>
+            <li><a href="research.html">Research</a></li>
             <li><a href="work.html">Current Work</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="wasm/index.html">Wasm Site</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
     <main class="container section page">
-      <h1>Research Interests</h1>
-      <ul>
-        <li><strong>AI for engineering workflows:</strong> reducing friction in coding and review.</li>
-        <li><strong>Retrieval + LLM systems:</strong> making answers more grounded and reliable.</li>
-        <li><strong>Delivery reliability:</strong> balancing speed with quality and maintainability.</li>
-      </ul>
+      <h1>About Me</h1>
+      <p>
+        I’m a software engineer focused on turning ambiguous ideas into reliable,
+        user-facing products. I enjoy end-to-end ownership: scoping, architecture,
+        implementation, and iterative improvement.
+      </p>
+      <p>
+        I work best on teams that value engineering quality, thoughtful collaboration,
+        and measurable outcomes.
+      </p>
     </main>
 
     <footer class="site-footer"><div class="container"><p>© 2026 Alex Carter.</p></div></footer>
