--- a/Source/WebSite/index.html
+++ b/Source/WebSite/index.html
@@ -21,6 +21,7 @@
             <li><a href="work.html">Current Work</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="wasm/index.html">Wasm Site</a></li>
           </ul>
         </nav>
       </div>
@@ -57,6 +58,11 @@
             <h3>Blog</h3>
             <p>Notes and short essays on engineering, AI, and delivery.</p>
             <a href="blog.html">Read more →</a>
+          </article>
+          <article class="card">
+            <h3>Wasm Companion</h3>
+            <p>See the C++/WebAssembly build that mirrors this site.</p>
+            <a href="wasm/index.html">Open wasm site →</a>
           </article>
         </div>
       </section>
